--- a/src/styles.css
+++ b/src/styles.css
@@ -1,41 +1,55 @@
 .preview {
-    height: 150px;
-    max-width: 256px;
-    object-fit: contain;
+  height: 150px;
+  max-width: 256px;
+  object-fit: contain;
 }
 
 .preview_no_selection {
-    border: dotted lightgrey;
-    border-radius: 16px;
-    height: 150px;
-    width: 150px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  border: dotted lightgrey;
+  border-radius: 16px;
+  height: 150px;
+  width: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .naming {
-    display: flex;
-    gap: 8px;
+  display: flex;
+  gap: 8px;
 }
 
 .naming > div:nth-child(1) {
-    flex-basis: 70%
+  flex-basis: 70%;
 }
 
 .naming > div:nth-child(2) {
-    flex-basis: 30%
+  flex-basis: 30%;
+}
+
+.quality {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+
+.quality > div:nth-child(1) {
+  flex-basis: 70%;
+}
+
+.quality > div:nth-child(2) {
+  flex-basis: 30%;
 }
 
 #donate {
-    display: flex;
-    align-items: center;
-    width: fit-content;
-    margin-left: auto;
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  margin-left: auto;
 }
 
 #donate > img {
-    height: 24px;
-    padding-right: 8px;
+  height: 24px;
+  padding-right: 8px;
 }
